--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
  html{
-    --primary-color:"#64FFDA";
+    --primary-color:"#8A2BE2";
     scroll-behavior: smooth;
  }
  ::-webkit-scrollbar-track
@@ -21,5 +21,5 @@
  ::-webkit-scrollbar-thumb
  {
    border-radius: 10px;
-   background-color: #64FFDA;
+   background-color: #8A2BE2;
  }
